Using Integer.valueOf instead of new Integer